@@ -31,10 +31,14 @@ namespace Builder
 		private string _name;
 		private string _contents;
 		private string _mime;
+		private int? _original_id;
+		private DateTime? _changed_date;
 
 		public string @name { get { return _name; } set { _name = value; } }
 		public string @contents { get { return _contents; } set { _contents = value; } }
 		public string @mime { get { return _mime; } set { _mime = value; } }
+		public int? @original_id { get { return _original_id; } set { _original_id = value; } }
+		public DateTime? @changed_date { get { return _changed_date; } set { _changed_date = value; } }
 
 
 		public override string Table
@@ -47,7 +51,7 @@ namespace Builder
 		{
 			get
 			{
-				return new string [] { "name", "contents", "mime" };
+				return new string [] { "name", "contents", "mime", "original_id", "changed_date" };
 			}
 		}
         
