@@ -1,3 +1,8 @@
+2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* EditLaneFile.aspx.cs: Add some simple change tracking to
+	  steps.
+
 2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* EditLane.aspx.cs: First attempt of implementing deletion of
